<resources>
    <string name="app_name">FinanSimples</string>

    <string name="open_drawer">Aberto</string>
    <string name="close_drawer">Fechado</string>

    <string name="action_bar_month_detail">Detalhes</string>
    <string name="action_bar_add_title">Adicionar</string>
    <string name="add_menu_action_bar_title">Adicionar</string>
    <string name="menu_action_bar_title">Menu</string>
    <string name="chart_activ_action_bar_title">Acompanhamento - %d</string>
    <string name="chart_activ_total_label">Total %d:</string>

    <string name="add_menu_option_1">Despesa</string>
    <string name="add_menu_option_2">Receita</string>

    <string name="actbardrawtoggle_menu_option_1">Acompanhamento Anual</string>
    <string name="actbardrawtoggle_menu_option_2">Como Usar</string>

    <string name="expense_title">Adicionar Despesa</string>
    <string name="income_title">Adicionar Receita</string>
    <string name="income_expense_popup_message">Valor:</string>
    <string name="negative_button_message">Cancelar</string>
    <string name="positive_button_message">@android:string/ok</string>
    <string name="balance_label">Total:</string>
    <string name="out_of_bounds_label">Infinito...</string>
    <string name="chart_not_enough_values">É necessário que você tenha acompanhado suas despezas por dois meses ou mais.</string>

    <string name="db_cant_write">Erro! Libere espaço no celular para salvar!</string>
    <string name="title_activity_calendar">CalendarActivity</string>

    <string name="datepicker_title">Selecione...</string>
    <string name="amount_detail_date_title">Cadastrado em:</string>
    <string name="amount_detail_pos_date">* Mês Posterior</string>

    <string name="help_title_1">Removendo</string>
    <string name="help_title_2">Detalhando</string>
    <string name="help_title_3">Trocando Mês</string>
    <string name="help_title_4">Acompanhando</string>
    <string name="help_nav_instruction">&lt;--  DESLIZE PARA NAVEGAR  --&gt;</string>

    <string name="amount_hint">Valor</string>
    <string name="amount_title_prompt">Deseja adicionar um título:</string>
    <string name="amount_title_no">Não</string>
    <string name="amount_title_yes">Sim</string>
    <string name="amount_title_hint">Título</string>
    <string name="amount_invalid_value">Não é possível inserir o valor informado!</string>
    <string name="amount_invalid_title">O título não pode ficar em branco!</string>
    <string name="amount_without_title">Sem título</string>
</resources>
