<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:id="@+id/amountItemRelativeLay">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="35dp"
        android:layout_centerVertical="true"
        android:id="@+id/amountItemTextView"
        style="@style/amountItemTextView"/>

</RelativeLayout>
