<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/helpActivRelLay"
    style="@style/dialogRelLay"
    tools:context="com.jabarasca.financial_app.HelpActivity">

    <TextView
        android:id="@+id/helpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        style="@style/actionBarTextViewStyle" />

    <ImageSwitcher
        android:id="@+id/helpImgSwitcher"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/helpTitle"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/helpPageNumber"
        android:textStyle="bold"
        android:textColor="@color/textDialogColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/helpOkButton"
        android:layout_below="@+id/helpImgSwitcher"
        android:layout_centerHorizontal="true"
        style="@style/dialogOkButton" />

</RelativeLayout>
